--- a/.github/workflows/surge_deployment.yml
+++ b/.github/workflows/surge_deployment.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: React App Deploy to Surge
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -38,4 +38,4 @@ jobs:
         run: npm install --global surge
      
       - name: Deploy to Surge
-        run: surge ./build Restaurant-salman.surge.sh --token ${{secrets.SURGE_TOKEN}}
+        run: surge ./build Arabianfoods.surge.sh --token ${{secrets.SURGE_TOKEN}}
